<resources>
    <string name="app_name">EmergencyGuide</string>
    <string name="google_api_key">AIzaSyDah3TDwA26PzqpNtFuGq9EI9G3GB1Efhg</string>
    <string name="main_top">무엇을\n도와드릴까요?</string>
    <string name="main_search">검색어를 입력하세요</string>
    <string name="main_emergency_guide_top">상황별 응급처치 방법이 궁금하다면</string>
    <string name="main_emergency_guide_bottom">응급처치</string>
    <string name="main_evacuation_top">내 주변 대피소 위치가 궁금하다면</string>
    <string name="main_evacuation_bottom">대피</string>
    <string name="main_hospital_top">내 주변 병원, 약국의 정보가 궁금하다면</string>
    <string name="main_hospital_bottom">병원/약국 위치</string>
    <string name="main_emergency_number_top">어디에 전화해야 하는지 궁금하다면</string>
    <string name="main_emergency_number_bottom">긴급 연락처</string>
    <string name="main_medicine_top">무슨 약을 먹어야 하는지 궁금하다면</string>
    <string name="main_medicine_bottom">약 복용법</string>
    <string name="hospital_title">병원(약국) 위치</string>
    <string name="hospital_search">병원 검색</string>
    <string name="hospital_detail">상세 보기</string>
    <string name="hospital_detail_address">주소</string>
    <string name="hospital_detail_hours">영업시간</string>
    <string name="hospital_detail_phone">전화번호</string>
    <string name="hospital_detail_review">리뷰</string>
    <string name="hospital_detail_post">작성</string>
    <string name="review_post_title">병원(약국) 리뷰 작성</string>
    <string name="review_post_name">이름</string>
    <string name="review_post">리뷰 작성하기</string>
    <string name="review_post_name_hint">이름을 작성해주세요</string>
    <string name="review_post_hint">리뷰를 작성해주세요</string>
    <string name="review_post_submit">리뷰 제출</string>
    <string name="evacuation_earthquake_tips">1. 안전한 장소로 이동\n2. 주변 위험 요인 확인\n3. 대피 후 구조 요청</string>
    <string name="evacuation_fire_tips">1. 주변 사람에게 알리기\n2. 대피 방법 결정\n3. 신속히 대피</string>
    <string-array name="name">
        <item>닥터베아제정</item>
        <item>베아제정</item>
        <item>신신파스아렉스</item>
        <item>어린이부루펜시럽(이부프로펜)</item>
        <item>어린이용타이레놀정80밀리그람(아세트아미노펜)</item>
        <item>어린이타이레놀현탁액</item>
        <item>제일쿨파프</item>
        <item>타이레놀정160밀리그람(아세트아미노펜)</item>
        <item>타이레놀정500밀리그람(아세트아미노펜)(수출명:TylenolExtraStrengthCaplets)</item>
        <item>판콜에이내복액</item>
        <item>판피린티정</item>
        <item>훼스탈골드정</item>
        <item>훼스탈플러스정</item>
    </string-array>
    <string-array name="enterprise">
        <item>(주)대웅제약</item>
        <item>(주)대웅제약</item>
        <item>신신제약(주)</item>
        <item>삼일제약(주)</item>
        <item>(주)한국얀센</item>
        <item>(주)한국얀센</item>
        <item>제일헬스사이언스(주)</item>
        <item>(주)한국얀센</item>
        <item>(주)한국얀센</item>
        <item>동화약품(주)</item>
        <item>동아제약(주)</item>
        <item>(주)한독</item>
        <item>(주)한독</item>
    </string-array>
    <string-array name="expiration">
        <item>제조일로부터 24개월</item>
        <item>제조일로부터 24개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 24개월</item>
        <item>제조일로부터 24개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 24개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 36개월</item>
        <item>제조일로부터 36개월</item>
    </string-array>
    <string-array name="storage">
        <item>기밀용기, 실온(1-30℃)보관</item>
        <item>기밀용기</item>
        <item>기밀용기, 실온(1-30℃)보관</item>
        <item>차광기밀용기, 실온(1-30℃)보관</item>
        <item>밀폐용기 실온보관</item>
        <item>기밀용기, 실온보관</item>
        <item>기밀용기 실온보관(1-30℃)보관</item>
        <item>밀폐용기 실온보관</item>
        <item>밀폐용기, 실온보관(1-30℃)</item>
        <item>기밀용기, 실온(1-30℃)보관</item>
        <item>기밀용기,실온보관</item>
        <item>실온보관(30℃이하), 밀폐용기</item>
        <item>밀폐용기, 실온보관</item>
    </string-array>
    <string-array name="effect">
        <item>소화불량, 식욕감퇴(식욕부진), 과식, 체함, 소화촉진, 소화불량으로 인한 위부팽만감</item>
        <item>소화불량, 식욕감퇴(식욕부진), 과식, 체함, 소화촉진, 소화불량으로 인한 위부팽만감</item>
        <item>다음 증상의 진통 · 소염(항염) : 어깨결림, 요(허리)통, 신경통, 류마티스, 타박상, 염좌(삠), 근육통, 관절통</item>
        <item>(경구)\n
            1. 주효능 효과\n
            류마티양 관절염, 연소성 류마티양 관절염, 골관절염(퇴행성 관절질환),\n
            감기로 인한 발열 및 동통, 요통, 월경곤란증, 수술후 동통\n
            2. 다음 질환에도 사용할 수 있다.\n
            강직성 척추염, 두통, 치통, 근육통, 신경통, 급성통풍,\n
            건선성 관절염, 연조직손상(염좌, 좌상),\n
            비관절 류마티스질환(건염, 건초염, 활액낭염)\n
            (좌제)\n
            1. 주효능 효과\n
            어린이 급성 상기도염의 발열</item>
        <item>
            1. 주효능·효과\n
            감기로 인한 발열 및 동통(통증), 두통, 신경통, 근육통, 월경통, 염좌통(삔 통증)\n
            2. 다음 질환에도 사용할 수 있다.\n
            치통, 관절통, 류마티양 동통(통증)</item>
        <item>
            1. 주효능·효과\n
            감기로 인한 발열 및 동통(통증), 두통, 신경통, 근육통, 월경통, 염좌통(삔 통증)\n
            2. 다음 질환에도 사용할 수 있다.\n
            치통, 관절통, 류마티양 동통(통증)</item>
        <item>다음 증상의 진통ㆍ소염(항염) : 삠, 타박상, 근육통, 관절통, 골절통, 요(허리)통, 어깨결림, 신경통, 류마티스통증</item>
        <item>
            1. 주효능·효과\n
            감기로 인한 발열 및 동통(통증), 두통, 신경통, 근육통, 월경통, 염좌통(삔 통증)\n
            2. 다음 질환에도 사용할 수 있다.\n
            치통, 관절통, 류마티양 동통(통증)</item>
        <item>
            1. 주효능·효과\n
            감기로 인한 발열 및 동통(통증), 두통, 신경통, 근육통, 월경통, 염좌통(삔 통증)\n
            2. 다음 질환에도 사용할 수 있다.\n
            치통, 관절통, 류마티양 동통(통증)</item>
        <item>감기 제증상(여러 증상) [콧물, 코막힘, 재채기, 인후(목구멍)통, 기침, 가래, 오한(춥고 떨리는 증상), 발열, 두통, 관절통, 근육통]의 완화</item>
        <item>감기의 제증상(콧물, 코막힘, 재채기, 인후통, 오한, 발열, 관절통, 두통, 근육통)의 완화</item>
        <item>소화불량, 식욕감퇴(식욕부진), 과식, 식체(위체(체함)), 소화촉진, 소화불량으로 인한 위부팽만감</item>
        <item>소화불량, 식욕감퇴(식욕부진), 과식, 식체(위체(체함)), 소화촉진, 소화불량으로 인한 위부팽만감</item>
    </string-array>
    <string-array name="description">
        <item>성인 : 1회 1정을 1일 3회 식후 복용한다.</item>
        <item>성인 : 1회 1정 1일 3회 식후에 복용한다.</item>
        <item>1일 1~2회 환부(질환 부위)에 부착한다.</item>
        <item>* 류마티양 관절염, 골관절염, 강직성 척추염, 연조직손상, 비관절 류마티스질환, 급성통풍, 건선성 관절염 : 성인 이부프로펜으로서 1회 200-600mg 1일 3-4회 경구투여한다. 1일 최고 3200mg까지 투여할 수 있다.\n
* 연소성 류마티양 관절염 :\n
1일 체중 kg당 30-40mg을 3-4회 분할 경구투여한다.\n
* 경증 및 중등도의 동통, 감기:\n
성인 1회 200-400mg 1일 3-4회 경구투여한다.\n
* 연령, 증상에 따라 적절히 증감한다.\n
* 어린이는 다음 1회 용량을 1일 3-4회 경구투여한다.\n
체중이 30kg미만인 어린이는 1일량이 500mg(25ml)을 초과해서는 안되며 공복시 투여는 피하는 것이 바람직하다.\n
어린이 1회 용량 :\n
11-14세 : 200-250mg (10-13ml)\n
7-10세 : 150-200mg ( 8-10ml)\n
3- 6세 : 100-150mg ( 5- 8ml)\n
1- 2세 : 50-100mg ( 3- 5ml)</item>
        <item>만 12세 이하의 소아:\n
다음 1회 권장용량을 4-6시간 마다 필요시 복용한다.\n
이 약은 가능한 최단기간동안 최소 유효용량으로 복용하며, 1일 5회(75mg/kg)를 초과하여 복용하지 않는다.\n
몸무게를 아는 경우 몸무게에 따른 용량(10~15mg/kg)으로 복용하는 것이 더 적절하다.\n
연령          몸무게          아세트아미노펜으로서 1회 권장 용량     이 약 1회 권장용량\n
4개월~6개월    7 ~ 7.9kg     80mg                           1정\n
7개월~23개월   8 ~ 11.9kg    120mg                          1~2정\n
만 2~3세      12 ~ 15.9kg   160mg                          2정\n
만 4세~6세     16 ~ 22.9kg   240mg                          3정\n
만 7세~8세     23 ~ 29.9kg   320mg                          4정\n
만 9세~10세    30 ~ 37.9kg   400mg                          5정\n
만 11세       38 ~ 42.9kg   480mg                          6정\n
만 12세       43kg 이상      640mg                          8정
</item>
        <item>만 12세 이하의 소아:\n
다음 1회 권장용량을 4-6시간 마다 필요시 복용한다.\n
이 약은 가능한 최단기간동안 최소 유효용량으로 복용하며, 1일 5회 (75mg/kg)를 초과하여 복용하지 않는다.\n
몸무게를 아는 경우 몸무게에 따른 용량(10~15mg/kg)으로 복용하는 것이 더 적절하다.\n
연령          몸무게          아세트아미노펜으로서 1회 권장 용량          이 약 1회 권장용량\n
4개월~6개월    7 ~ 7.9kg     80mg                                2.5mL\n
7개월~23개월   8 ~ 11.9kg    120mg                               3.5mL\n
만 2~3세      12 ~ 15.9kg   160mg                               5mL\n
만 4세~6세     16 ~ 22.9kg   240mg                               7.5mL\n
만 7세~8세     23 ~ 29.9kg   320mg                               10mL\n
만 9세~10세    30 ~ 37.9kg   400mg                               12.5mL\n
만 11세       38 ~ 42.9kg   480mg                               15mL\n
만 12세       43kg 이상      640mg                               20mL
</item>
        <item>1일 1～2회 환부(질환 부위)에 붙인다.</item>
        <item>만 12세 이하의 소아:\n
다음 1회 권장용량을 4-6시간 마다 필요시 복용한다.\n
이 약은 가능한 최단기간동안 최소 유효용량으로 복용하며, 1일 5회 (75mg/kg)를 초과하여 복용하지 않는다.\n
연령          몸무게          아세트아미노펜으로서 1회 권장 용량          이 약 1회 권장용량\n
4개월~6개월    7 ~ 7.9kg     80mg                                -\n
7개월~23개월   8 ~ 11.9kg    120mg                               -\n
만 2~3세      12 ~ 15.9kg   160mg                               1정\n
만 4세~6세     16 ~ 22.9kg   240mg                               1~2정\n
만 7세~8세     23 ~ 29.9kg   320mg                               2정\n
만 9세~10세    30 ~ 37.9kg   400mg                               2~3정\n
만 11세       38 ~ 42.9kg   480mg                               3정\n
만 12세       43kg 이상      640mg                               4정
몸무게를 아는 경우 몸무게에 따른 용량(10~15mg/kg)으로 복용하는 것이 더 적절하다.</item>
        <item>만 12세 이상 소아 및 성인:\n
1회 1~2정씩 1일 3-4회 (4-6시간 마다) 필요시 복용한다.\n
1일 최대 4그램 (8정)을 초과하여 복용하지 않는다.\n
이 약은 가능한 최단기간동안 최소 유효용량으로 복용한다.</item>
        <item>성인 1회 30ml 1일 3회 식후 30분에 복용한다.</item>
        <item>성인 1회 1정, 1일 3회 식후 30분에 복용</item>
        <item>성인 1회 1정, 1일 3회 식사 후 씹지 말고 복용한다.</item>
        <item>성인 1회 1-2정, 소아(만 8세~만15세미만) 1회 1정\n
1일 3회, 식사 후 씹지 말고 복용한다</item>
    </string-array>
</resources>