<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HospitalPharmacy.HospitalActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hospital_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="14dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hospital_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="14dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_hospital_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_hospital_start"
        app:layout_constraintEnd_toEndOf="@id/gl_hospital_end"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/iv_hospital_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_hospital_title"
            android:text="@string/hospital_title"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_hospital_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/et_hospital_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_hospital_top_bar"
        app:layout_constraintStart_toStartOf="@id/gl_hospital_start"
        app:layout_constraintEnd_toEndOf="@id/gl_hospital_end"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/main_rectangle_gray2_10"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:hint="@string/hospital_search"
        android:textSize="14sp"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mv_hospital"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/gl_hospital_start"
        app:layout_constraintEnd_toEndOf="@id/gl_hospital_end"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/et_hospital_search"
        android:layout_marginTop="12dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hospital"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/gl_hospital_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mv_hospital"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/hospital_rectangle_black_8"
        app:layout_constraintStart_toStartOf="@id/gl_hospital_start"
        app:layout_constraintEnd_toEndOf="@id/gl_hospital_end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital_detail"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>